--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <!--owl css-->
     <link rel="stylesheet" href="style/owl/owl.carousel.min.css">
-    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">i
+    <link rel="stylesheet" href="style/owl/owl.theme.default.min.css">
     
     <title>NETFLIX CLONE</title>
 
